# signature-paper

./: .gitignore  .gitmodules  Makefile  Notes.md  TODO.md  init.html  listings_haskell.tex  paper.bib  paper.md  revealjs.html  signature-paper.cabal  stack.yaml  talk.css  talk.md  todo.md
examples/: Examples.hs
filters/: fix-biblio.hs  ghci.hs
src/Feldspar/Compiler/: Signature.hs
