name:                signature-paper
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Anders Persson, Emil Axelsson
maintainer:          anders.cj.persson@gmail.com
-- copyright:
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src examples
  exposed-modules:     Examples
                       Feldspar.Compiler.Signature
  build-depends:       base >= 4.7 && < 5
               , imperative-edsl
               , language-c-quote >= 0.10.2
               , mainland-pretty >= 0.2.7
               , feldspar-language
               , feldspar-compiler-shim
               , pandoc-types
               , hint
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/emwap/signature-paper

executable codeblock
  hs-source-dirs: filters

  main-is: ghci.hs

  default-language: Haskell2010

  build-depends: base
               , hint
               , pandoc-types
